--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@ and open the template in the editor.
         <script type="text/javascript" src="js/engine.js"></script>
     </head>
     <body>
-           <div id="play"></div>
+           <div id="play"><h2>Game Mengurutkan Nama Nabi</h2></div>
     </body>
 </html>
