Fix bug and adding new version of jquery

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ and open the template in the editor.
         <title>Mengurutkan Nama Nabi | Sorting Islamic Prophet</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" type="text/css" href="style/style.css"/>
-        <script type="text/javascript" src="js/jquery1.4.2.js"></script>
-        <script type="text/javascript" src="js/jquery-ui-1.8.2.custom.min.js"></script>
+        <script type="text/javascript" src="js/jquery-1.9.1.js"></script>
+        <script type="text/javascript" src="js/jquery-ui-1.10.2.custom.js"></script>
         <script type="text/javascript" src="js/engine.js"></script>
     </head>
     <body>
